src/snapshots/fermat__layout_fun__layout_fun_tests__choice.snap
---
source: src/layout_fun.rs
expression: "LayoutFun::choice(LayoutFun::text(\"if(foo) bar();\", config),\n                  LayoutFun::stack(LayoutFun::text(\"if(foo)\", config),\n                                   LayoutFun::text(\"    bar();\", config),\n                                   config)).to_vec()"
---
[
    (
        0,
        Layout {
            layout_expr: Text(
                "if(foo) bar();",
            ),
            span: 14,
            height: 1,
            cost: 0,
            cost_gradient: 0,
        },
    ),
    (
        2,
        Layout {
            layout_expr: Text(
                "if(foo) bar();",
            ),
            span: 14,
            height: 1,
            cost: 0,
            cost_gradient: 100,
        },
    ),
    (
        3,
        Layout {
            layout_expr: Stack(
                Text(
                    "if(foo)",
                ),
                Text(
                    "    bar();",
                ),
            ),
            span: 10,
            height: 2,
            cost: 1,
            cost_gradient: 0,
        },
    ),
    (
        6,
        Layout {
            layout_expr: Stack(
                Text(
                    "if(foo)",
                ),
                Text(
                    "    bar();",
                ),
            ),
            span: 10,
            height: 2,
            cost: 1,
            cost_gradient: 100,
        },
    ),
    (
        9,
        Layout {
            layout_expr: Stack(
                Text(
                    "if(foo)",
                ),
                Text(
                    "    bar();",
                ),
            ),
            span: 10,
            height: 2,
            cost: 301,
            cost_gradient: 200,
        },
    ),
]
