src/snapshots/fermat__layout_fun__layout_fun_tests__multi_line_cost_two_lines.snap
---
source: src/layout_fun.rs
expression: "LayoutFun::multi_line_cost(LayoutFun::stack(LayoutFun::text(\"foo\", 3, config),\n                                            LayoutFun::text(\"bar\", 3, config),\n                                            config), config).to_vec()"
---
[
    (
        0,
        Layout {
            layout_expr: Stack(
                Text(
                    "foo",
                    3,
                ),
                Text(
                    "bar",
                    3,
                ),
            ),
            span: 3,
            height: 2,
            cost: 10001,
            cost_gradient: 0,
        },
    ),
    (
        1,
        Layout {
            layout_expr: Stack(
                Text(
                    "foo",
                    3,
                ),
                Text(
                    "bar",
                    3,
                ),
            ),
            span: 3,
            height: 2,
            cost: 10001,
            cost_gradient: 200,
        },
    ),
]
