src/snapshots/fermat__layout_fun__layout_fun_tests__stack.snap
---
source: src/layout_fun.rs
expression: "LayoutFun::stack(LayoutFun::text(\"foobar\", 6, config),\n                 LayoutFun::text(\"baz\", 3, config), config).to_vec()"
---
[
    (
        0,
        Layout {
            layout_expr: Stack(
                Text(
                    "foobar",
                    6,
                ),
                Text(
                    "baz",
                    3,
                ),
            ),
            span: 3,
            height: 2,
            cost: 1,
            cost_gradient: 0,
        },
    ),
    (
        2,
        Layout {
            layout_expr: Stack(
                Text(
                    "foobar",
                    6,
                ),
                Text(
                    "baz",
                    3,
                ),
            ),
            span: 3,
            height: 2,
            cost: 1,
            cost_gradient: 100,
        },
    ),
    (
        5,
        Layout {
            layout_expr: Stack(
                Text(
                    "foobar",
                    6,
                ),
                Text(
                    "baz",
                    3,
                ),
            ),
            span: 3,
            height: 2,
            cost: 301,
            cost_gradient: 200,
        },
    ),
]
