src/snapshots/fermat__layout_fun__layout_fun_tests__text.snap
---
source: src/layout_fun.rs
expression: "LayoutFun::text(\"foo\", 3,\n                &Config{right_margin: 5,\n                        newline_cost: 1,\n                        beyond_right_margin_cost: 100,\n                        height_cost: 10000,\n                        max_choice_nest_level: 100,}).to_vec()"
---
[
    (
        0,
        Layout {
            layout_expr: Text(
                "foo",
                3,
            ),
            span: 3,
            height: 1,
            cost: 0,
            cost_gradient: 0,
        },
    ),
    (
        2,
        Layout {
            layout_expr: Text(
                "foo",
                3,
            ),
            span: 3,
            height: 1,
            cost: 0,
            cost_gradient: 100,
        },
    ),
]
